--- a/src/static/index.html
+++ b/src/static/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>SchulCloud Client</title>
+    <title>SchulCloud</title>
 	  <link rel="stylesheet" type="text/css" href="/styles.css">
   </head>
   <body>
