--- a/src/static/index.html
+++ b/src/static/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Schul-Cloud</title>
 	  <link rel="stylesheet" type="text/css" href="/styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     <div id="root" />
